<resources>
    <string name="app_name">PracticaKotlin</string>
    <string name="title_activity_first_app">FirstAppActivity</string>
    <string name="male">hombre</string>
    <string name="female">mujer</string>
    <string name="height">altura</string>
    <string name="age">edad</string>
    <string name="weight">peso</string>
    <string name="calculate">calcular</string>
    <string name="turesultado">Tu resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
    <string name="TODO_bienvenido">Bienvenido</string>
    <string name="TODO_categorias">Categorias</string>
    <string name="TODO_tareas">Tareas</string>
    <string name="TODO_añadir_tarea">Añadir tarea"</string>

    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_add_task_button">Crear tarea</string>
</resources>