<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/todo_background_todo_app"
    tools:context=".TODOAPP.TodoActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/TODO_bienvenido"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="40dp"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/TODO_categorias"
            android:textStyle="bold"
            android:textAllCaps="true"
            style="@style/TodoSubtitle"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/TODO_tareas"
            style="@style/TodoSubtitle"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvTareas"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/todo_accent"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        />

</FrameLayout>

